--- a/NNN-Solution/NNN/NNN.csproj
+++ b/NNN-Solution/NNN/NNN.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
+    <PackageReference Include="NumSharp" Version="0.30.0" />
   </ItemGroup>
 
 </Project>
