--- a/NNN-Solution/NNN/NNN.csproj
+++ b/NNN-Solution/NNN/NNN.csproj
@@ -5,15 +5,16 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <Platforms>AnyCPU;x64</Platforms>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="33.1.0" />
     <PackageReference Include="ILGPU" Version="1.5.3" />
-    <PackageReference Include="Keras.NET" Version="3.8.5" />
-    <PackageReference Include="Numpy.Bare" Version="3.11.1.33" />
+    <PackageReference Include="libtorch-cpu-win-x64" Version="2.5.1" />
     <PackageReference Include="NumSharp" Version="0.30.0" />
-    <PackageReference Include="TensorFlow.NET" Version="0.150.0" />
+    <PackageReference Include="TorchSharp" Version="0.105.1" />
+    <PackageReference Include="TorchVision" Version="0.105.1" />
   </ItemGroup>
 
 </Project>
