--- a/NNN-Solution/NNN/NNN.csproj
+++ b/NNN-Solution/NNN/NNN.csproj
@@ -9,8 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="CsvHelper" Version="33.1.0" />
-    <PackageReference Include="MathNet.Numerics" Version="5.0.0" />
     <PackageReference Include="NumSharp" Version="0.30.0" />
+    <PackageReference Include="TorchSharp" Version="0.105.1" />
   </ItemGroup>
 
 </Project>
